# jellies

./: CMakeLists.txt
include/: base64.h  jellies.h  sdl_wrapper.h
src/: main.cpp
